--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 DPUNet_2025_07_04__15_51_01/
 test.py
 model_monitor.egg-info
+auto_model_monitor.egg-info
 *.egg-info
 __pycache__/
+!tests/test.py
+build/
+dist/
